--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,17 @@
 .app-wrapper {
     background-color: grey;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Helvetica, sans-serif;
     width: auto;
+    height: 3000px;
     
 }
+
+.app-wrapper-main{
+    display: grid;
+    float: left;
+    grid-template-columns: 1fr 11fr;
+}
+
 
 .app-wrapper-content {
     background-color: blue;
