--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,10 +1,9 @@
 .item  {
+    font-family: Cochin, Cambria, sans-serif;
     display: block;
-    background-color: green;
+    background-image: url(https://image.freepik.com/free-vector/fast-data-transfer-digital-systems_49459-588.jpg);
     border: black 2px solid;
-    float: left;
-    height: 2000px;
-    width: 15%;
+    height: 3000px;
 }
 .item div span{
     color: honeydew;
