--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,9 +1,6 @@
 .content{
-    color: blue;
-    height: 2000px;  
-    width: 85%;
-    padding-left: 215px;
-    padding-top: 15px;
+    color: orange;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .content span{
